# oos

./: Cargo.toml  README.md
.cargo/: config
src/: game_of_life.rs  main.rs  vga_buffer.rs
