[package]
name = "oos"
version = "0.1.0"
authors = ["Odin Dutton <odindutton@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.3"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.4.9"

[package.metadata.bootimage]
default-target = "x86_64-oos.json"
